# MemoryNexus

./: .env.example  .env.runtime.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.runtime.yml  docker-compose.yml  requirements.txt
decisions/: ADR-001-backend-language.md  ADR-002-cognitive-lens-memory.md  ADR-002-storage-abstraction.md  ADR-003-vector-database.md  ADR-004-whisper-deployment.md  ADR-005-project-naming.md  ADR-006-cli-agent-interface.md  ADR-007-development-methodology.md  ADR-009-rust-first-backend.md  ADR-010-memory-salience.md  README.md  (+14 more)
docs/: TODO.md  (+36 more)
src/: .gitignore  Cargo.toml  Dockerfile  README.md  eval.rs  install.rs  lib.rs  main.rs
src/.cargo/: config.toml
src/.github/workflows/: ci.yml
src/.sqlx/: query-001_initial_schema.json
src/ai/: mod.rs  summary.rs  transcription.rs
src/api/: agent_router.rs  ai.rs  auth.rs  feedback_loops.rs  health.rs  learning_math.rs  lens_runs.rs  lenses.rs  main.py  memories.rs  mod.rs  namespaces.rs  profiles.rs  reminders.rs  review_reports.rs  search.rs  semantic.rs  spaces.rs  surfaces.rs  upload.rs  voice.rs  web.rs
src/api/routes/: ai.py  auth.py  memories.py  reminders.py  search.py  todos.py  users.py
src/auth/: mod.rs  password.rs
src/core/: config.py  database.py
src/db/: feedback_loop.rs  lens.rs  lens_run.rs  memory.rs  mod.rs  namespace.rs  profile.rs  reminder.rs  review_report.rs  sleep_cycles.rs  space.rs  tag.rs  trace.rs  user.rs
src/domain/: cognitive_scene.rs  dictation.rs  dictation_agent_demo.rs  dictation_observation.rs  dream_candidate.rs  event.rs  evidence.rs  growth_model.rs  memory_atom.rs  mod.rs  personal_feedback.rs  personal_feedback_observation.rs  personal_feedback_outcome.rs  personal_feedback_planning.rs  practice_plan.rs  reflection.rs  sleep_cycle.rs  surface.rs  trace.rs
src/error/: mod.rs
src/migrations/: 001_initial_schema.sql
src/models/: schemas.py
src/search/: filter.rs  mod.rs  query.rs
src/src/: lib.rs  main.rs
src/src/ai/: embedding.rs  mod.rs  summary.rs
src/src/api/: ai.rs  auth.rs  embedding.rs  health.rs  memories.rs  mod.rs  search.rs  semantic.rs  tags.rs  upload.rs
src/src/auth/: jwt.rs  mod.rs  password.rs
src/src/db/: memory.rs  mod.rs  space.rs  tag.rs  user.rs
src/src/domain/: mod.rs
src/src/error/: mod.rs
src/src/search/: filter.rs  mod.rs  query.rs
src/src/state/: mod.rs
src/src/storage/: mod.rs  s3.rs  thumbnail.rs
src/src/vector/: mod.rs  repository.rs
src/state/: mod.rs
src/storage/: s3.rs
src/tests/: api_test.rs
src/vector/: mod.rs  repository.rs
(+99 files in other folders)
