[package]
name = "memorynexus"
version = "0.1.0"
edition = "2021"
authors = ["MemoryNexus Team"]
description = "Family AI Memory Center - 家庭AI记忆中心"
license = "MIT"
repository = "https://github.com/blackfaced/MemoryNexus"
rust-version = "1.75"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for AI APIs)
reqwest = { version = "0.12", features = ["json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
async-trait = "0.1"
rand = "0.8"

# Storage (S3)
aws-config = "1"
aws-sdk-s3 = "1"

# Image processing
image = "0.25"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
